<resources>
    <string name="app_name">LivingHeritage</string>
    <string name="title_activity_tree_map">Map</string>
    <string name="sigin">Sign In</string>
    <string name="tagtree">Tag New Tree</string>
    <string name="email_hint">Eg: johndoe@gmail.com</string>
    <string name="password_hint">Type password here</string>
    <string name="re_password_hint">Retype password here</string>
    <string name="phone_hint">Eg:8005671233</string>
    <string name="name_hint">Eg: John Doe</string>
    <string name="signup">Sign Up</string>
    <string name="treehint">Tree name | Eg: Banyan Tree</string>
    <string name="descriptionhint">Description | Eg: This tree  is situated on the side of the Mapusa-Calangute road.</string>
</resources>
