<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:alpha="1"
        android:src="@drawable/ic_living_heritage_svg_01" />


    <EditText
        android:id="@+id/edt_username"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/iv_logo"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="24dp"
        android:hint="@string/name_hint"
        android:inputType="textEmailAddress"
        android:minWidth="250dp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_username"
        android:layout_below="@id/edt_username"
        android:layout_marginTop="8dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minWidth="250dp" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="256dp"
        android:layout_below="@id/edt_email"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_username"
        android:layout_marginTop="8dp"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:minWidth="250dp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_username"
        android:layout_below="@id/edt_phone"
        android:layout_marginTop="8dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minWidth="250dp" />

    <EditText
        android:id="@+id/edt_repassword"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_username"
        android:layout_below="@id/edt_password"
        android:layout_marginTop="8dp"
        android:hint="@string/re_password_hint"
        android:inputType="textPassword"
        android:minWidth="250dp" />


    <Button
        android:id="@+id/btn_signup"
        android:layout_width="128dp"
        android:layout_height="42dp"
        android:layout_alignEnd="@+id/edt_username"
        android:layout_below="@id/edt_repassword"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        android:text="@string/signup"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/iv_logo"

        android:layout_marginStart="31dp"
        android:layout_marginTop="36dp"
        app:srcCompat="@drawable/ic_person_black_24dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@id/imageView"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/ic_mail_outline_black_24dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@id/imageView2"
        android:layout_marginTop="26dp"
        app:srcCompat="@drawable/ic_call_black_24dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@id/imageView3"
        android:layout_marginTop="28dp"
        app:srcCompat="@drawable/ic_vpn_key_black_24dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@id/imageView4"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/ic_vpn_key_black_24dp" />

</RelativeLayout>