<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:paddingBottom="-4dp"
        android:src="@drawable/ic_living_heritage_svg_01" />

    <TextView
        android:id="@+id/txt_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/montserrat"
        android:paddingTop="-4dp"
        android:text="LIVING HERITAGE"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#78be97"
        android:textSize="30sp"
        android:visibility="visible"
        tools:text="Living Heritage" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_company_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minWidth="250dp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minWidth="250dp" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="148dp"
        android:layout_height="42dp"
        android:layout_alignEnd="@+id/edt_username"
        android:layout_below="@id/edt_password"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:onClick="signInUser"
        android:text="@string/sigin"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_create_user"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="88dp"
        android:layout_height="32dp"
        android:layout_alignStart="@+id/iv_logo"
        android:layout_alignTop="@+id/btn_signin"
        android:background="#efefef"
        android:onClick="gotoSignUp"
        android:text="@string/signup"
        android:textColor="#78be97" />

</RelativeLayout>