<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="144dp"
        android:layout_height="224dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_add_image_svg" />

    <TextView
        android:id="@+id/txt_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:alpha="1"
        android:fontFamily="sans-serif"
        android:text="Enter Tree Details"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#04a175"
        android:visibility="visible"
        tools:text="ENTER TREE DETAILS" />

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_company_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="Location Details(latitude, longitude)"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/edt_treename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_location"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:hint="@string/treehint"/>

    <EditText
        android:id="@+id/edt_treedescription"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edt_treename"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:hint="@string/descriptionhint"/>


    <Button
        android:id="@+id/btn_tagtree"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_below="@id/edt_treedescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:onClick="signInUser"
        android:text="@string/tagtree"
        android:textColor="#ffffff" />



</RelativeLayout>